# Termux-Bootloader-ng

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile
src/Documentation/Special_Variables/: special_variables.md
src/Documentation/Usage/: usage.md
src/cJSON/: cJSON.c
src/include/: tblng-config.h  tblng-intern-config.h
src/initconf/: initconf.c  initconf_bl.c  initconf_core.c
src/main/: TBL-ng.c  parse_json.c
src/menu/: draw_menu.c  interactive_menu.c
src/themes/: init_themes.c  look_theme2pair.c
